# persistproc

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DOCUMENTATION_SUMMARY.md  README.md  mise.toml  mkdocs-local.yml  mkdocs.yml  persistproc  persistproc.py  pp  pyproject.toml  pytest.ini  refactor_proposal.md  requirements-docs.txt  run-dev.sh  run-in-venv.sh  run-server.sh  testing_notes.md  venv-python
.cursor/: settings.json
.cursor/rules/: 100_run_in_venv.mdc  200_logging_strategy.mdc  300_no_function_imports.mdc
.github/workflows/: ci.yml  docs.yml  lint.yml  pr-docs-comment.yml  pypi.yml  test.yml  update-coverage-badge.yml
docs/: README.md  configuring-agents.md  index.md  installation.md  prompting-tips.md  tools.md
docs/api/: cli.md  (+1 more)
internal_docs/: 500_errors_mitigations.md  logging_strategy.md
persistproc/: __init__.py  __main__.py  cli.py  client.py  console.py  core.py  kill_persistproc.py  logging_utils.py  mcp_client_utils.py  process_manager.py  process_storage_manager.py  process_types.py  run.py  serve.py  server.py  text_formatters.py  tools.py  utils.py
persistproc_before_rewrite/: core.py
scripts/: bump-version  prepare-docs.sh  update_docs_help.py
tests/: conftest.py  fakes.py  helpers.py  test_cli.py  test_cli_integration.py  test_cli_smoke.py  test_e2e.py  test_end_to_end.py  test_filesystem_failures.py  test_labels.py  test_log_manager.py  test_mcp_tools.py  test_process_lifecycle.py  test_process_manager.py  test_process_manager_unit.py  test_text_formatters.py  test_tools_unit.py  test_utils.py
(+26 files in other folders)
