[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "persistproc"
version = "0.1.0"
description = "A shared process layer for the modern, multi-agent development workflow."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Steve Landey", email = "steve@stevelandey.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "fastmcp==2.9.2",
]

[project.optional-dependencies]
dev = ["black", "pytest>=7.0", "pytest-asyncio>=0.21", "pytest-cov>=4.0"]

[project.scripts]
persistproc = "persistproc:main"

[project.urls]
Homepage = "https://github.com/irskep/persistproc-mcp"
"Bug Tracker" = "https://github.com/irskep/persistproc-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["persistproc.py"] 